Consolidate test results into single 'Test Results' check
- pr.yml: Add dedicated test-results job that runs after all test jobs
  - Downloads all test artifacts from matrix jobs
  - Publishes combined results as single 'Test Results' check
  - Removes per-job test reporter (reduces noise, single consolidated view)
- ci.yml: Rename test reporter output to 'Test Results'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: always()
         with:
-          name: Tests
+          name: Test Results
           path: ./test-results/*.trx
           reporter: dotnet-trx
 
