--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,10 +27,6 @@ jobs:
     
     runs-on: ${{ matrix.os }}
 
-    permissions:
-      checks: write
-      pull-requests: write
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -59,10 +55,27 @@ jobs:
             ./test-results/*.html
           retention-days: 30
 
+  test-results:
+    name: Test Results
+    needs: test
+    if: always()
+    runs-on: ubuntu-latest
+
+    permissions:
+      checks: write
+      pull-requests: write
+
+    steps:
+      - name: Download all test results
+        uses: actions/download-artifact@v4
+        with:
+          pattern: test-results-*
+          path: ./test-results
+          merge-multiple: true
+
       - name: Publish test results
         uses: dorny/test-reporter@v1
-        if: always()
         with:
-          name: Tests (${{ matrix.os }})
+          name: Test Results
           path: ./test-results/*.trx
           reporter: dotnet-trx
