Rename job to 'Publish Test Results' to avoid duplicate check names

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -56,7 +56,7 @@ jobs:
           retention-days: 30
 
   test-results:
-    name: Test Results
+    name: Publish Test Results
     needs: test
     if: always()
     runs-on: ubuntu-latest
