Add update available detection
Implements #2 - Adds automatic update checking that runs in the background.

Features:
- --check-update flag for manual update checks
- Background update checking (runs at most every 15 minutes)
- State files stored in ~/.dotnet-dev-certs-plus/
- Checks NuGet.org for stable/pre-release builds
- Checks GitHub Packages for dev builds (requires gh CLI or GITHUB_TOKEN)
- Yellow notification after commands when update is available
- DOTNET_DEV_CERTS_PLUS_DISABLE_UPDATE_CHECK env var to disable

New services:
- VersionInfo: Version parsing and comparison utilities
- UpdateStateManager: State file management
- NuGetClient: NuGet.org API client
- GitHubPackagesClient: GitHub Packages API client
- UpdateChecker: Main orchestration service

Includes comprehensive unit and integration tests.

--- a/src/dotnet-dev-certs-plus/dotnet-dev-certs-plus.csproj
+++ b/src/dotnet-dev-certs-plus/dotnet-dev-certs-plus.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta5.25306.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="dotnet-dev-certs-plus.Tests" />
+  </ItemGroup>
+
 </Project>
