--- a/src/dotnet-dev-certs-plus/dotnet-dev-certs-plus.csproj
+++ b/src/dotnet-dev-certs-plus/dotnet-dev-certs-plus.csproj
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.2" />
     <PackageReference Include="NuGet.Versioning" Version="6.13.1" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta5.25306.1" />
   </ItemGroup>
