Enable deterministic builds and Source Link
- Add Microsoft.SourceLink.GitHub package reference
- Enable PublishRepositoryUrl, EmbedUntrackedSources, and symbol packages
- Set ContinuousIntegrationBuild=true in CI environments
- Pass ContinuousIntegrationBuild=true in build action

Fixes #13
Fixes #7

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,17 @@
 <Project>
   <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+    <!-- Deterministic builds and Source Link -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <!-- Only enable CI build flag in CI environments to avoid local debugging issues -->
+    <ContinuousIntegrationBuild Condition="'$(CI)' == 'true'">true</ContinuousIntegrationBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+  </ItemGroup>
 </Project>
