Address PR feedback
- Use embedded portable symbols (DebugType=embedded) instead of snupkg
- Remove redundant ContinuousIntegrationBuild property (already set in build action)

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,10 +5,7 @@
     <!-- Deterministic builds and Source Link -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <!-- Only enable CI build flag in CI environments to avoid local debugging issues -->
-    <ContinuousIntegrationBuild Condition="'$(CI)' == 'true'">true</ContinuousIntegrationBuild>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
