Enable deterministic builds and Source Link (#21)
* Enable deterministic builds and Source Link

- Add Microsoft.SourceLink.GitHub package reference
- Enable PublishRepositoryUrl, EmbedUntrackedSources, and symbol packages
- Set ContinuousIntegrationBuild=true in CI environments
- Pass ContinuousIntegrationBuild=true in build action

Fixes #13
Fixes #7

* Address PR feedback

- Use embedded portable symbols (DebugType=embedded) instead of snupkg
- Remove redundant ContinuousIntegrationBuild property (already set in build action)

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,14 @@
 <Project>
   <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+    <!-- Deterministic builds and Source Link -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+  </ItemGroup>
 </Project>
