Simplify version bump: remove 'none' option, make 'auto' smarter
Auto now intelligently decides whether to bump version based on phase transition:
- Moving forward (pre→rc→rtm): no version bump needed
- Same phase or backwards: bumps version appropriately

This removes the need for separate 'none' option - 'auto' does the right thing.

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -4,11 +4,11 @@ on:
   workflow_dispatch:
     inputs:
       version_bump:
-        description: 'Version bump type'
+        description: 'Version bump type (auto uses appropriate bump based on phase transition)'
         required: true
+        default: 'auto'
         type: choice
         options:
-          - none
           - auto
           - patch
           - minor
