--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -1,10 +1,26 @@
-name: CI
+name: Bump Version
 
 on:
-  push:
-    branches: [main]
-    paths-ignore:
-      - '**/*.md'
+  workflow_dispatch:
+    inputs:
+      version_bump:
+        description: 'Version bump type (auto uses appropriate bump based on phase transition)'
+        required: true
+        default: 'auto'
+        type: choice
+        options:
+          - auto
+          - patch
+          - minor
+          - major
+      phase:
+        description: 'Target release phase'
+        required: true
+        type: choice
+        options:
+          - pre
+          - rc
+          - rtm
 
 env:
   DOTNET_NOLOGO: true
@@ -12,13 +28,12 @@ env:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
 
 jobs:
-  build:
+  bump:
     runs-on: ubuntu-latest
 
     permissions:
       contents: write
       packages: write
-      checks: write
 
     steps:
       - name: Checkout
@@ -31,37 +46,46 @@ jobs:
         with:
           dotnet-version: '10.0.x'
 
-      - name: Calculate version
+      - name: Calculate new version
         id: version
         env:
           GH_TOKEN: ${{ github.token }}
+          VERSION_BUMP: ${{ github.event.inputs.version_bump }}
+          PHASE: ${{ github.event.inputs.phase }}
         run: |
           set -e
 
-          # Get dev release body or releases list for initialization
+          # Get current state
           DEV_RELEASE_BODY=$(gh release view dev --json body --jq '.body // empty' 2>/dev/null || echo "")
 
           if [ -n "$DEV_RELEASE_BODY" ]; then
-            # Parse state from dev release body
             STATE_JSON=$(dotnet scripts/version.cs -- state --body "$DEV_RELEASE_BODY")
           else
-            # Initialize from releases
             RELEASES_JSON=$(gh release list --json tagName,isDraft,isPrerelease --limit 50 2>/dev/null || echo "[]")
             STATE_JSON=$(dotnet scripts/version.cs -- state --releases-json "$RELEASES_JSON")
           fi
 
           echo "Current state: $STATE_JSON"
 
-          # Check for pending release
-          PENDING=$(echo "$STATE_JSON" | jq -r '.pending')
-          if [ "$PENDING" != "none" ]; then
-            echo "Pending release detected ($PENDING), skipping dev build"
-            echo "skip=true" >> $GITHUB_OUTPUT
-            exit 0
+          # Get releases for validation
+          RELEASES_JSON=$(gh release list --json tagName,isDraft,isPrerelease --limit 100 2>/dev/null || echo "[]")
+
+          # Apply bump
+          NEW_STATE_JSON=$(dotnet scripts/version.cs -- bump \
+            --state "$STATE_JSON" \
+            --version-bump "$VERSION_BUMP" \
+            --phase "$PHASE" \
+            --releases-json "$RELEASES_JSON")
+
+          if [ $? -ne 0 ]; then
+            echo "::error::Version bump failed. See above for details."
+            exit 1
           fi
 
-          # Calculate versions
-          VERSIONS_JSON=$(dotnet scripts/version.cs -- calculate --state "$STATE_JSON")
+          echo "New state: $NEW_STATE_JSON"
+
+          # Calculate versions for the new state
+          VERSIONS_JSON=$(dotnet scripts/version.cs -- calculate --state "$NEW_STATE_JSON")
           echo "Calculated versions: $VERSIONS_JSON"
 
           DEV_VERSION=$(echo "$VERSIONS_JSON" | jq -r '.devVersion')
@@ -75,44 +99,24 @@ jobs:
           echo "version=${DEV_VERSION}" >> $GITHUB_OUTPUT
           echo "rc_version=${RC_VERSION}" >> $GITHUB_OUTPUT
           echo "next_state=${NEXT_STATE}" >> $GITHUB_OUTPUT
-          echo "state_json=${STATE_JSON}" >> $GITHUB_OUTPUT
-          echo "skip=false" >> $GITHUB_OUTPUT
+          echo "new_state_json=${NEW_STATE_JSON}" >> $GITHUB_OUTPUT
 
           # Summary
-          echo "## Version Information" >> $GITHUB_STEP_SUMMARY
-          echo "- **Dev Version:** ${DEV_VERSION}" >> $GITHUB_STEP_SUMMARY
-          echo "- **RC Version:** ${RC_VERSION}" >> $GITHUB_STEP_SUMMARY
+          echo "## Version Bump" >> $GITHUB_STEP_SUMMARY
+          echo "- **Bump Type:** ${VERSION_BUMP}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Target Phase:** ${PHASE}" >> $GITHUB_STEP_SUMMARY
+          echo "- **New Dev Version:** ${DEV_VERSION}" >> $GITHUB_STEP_SUMMARY
+          echo "- **New RC Version:** ${RC_VERSION}" >> $GITHUB_STEP_SUMMARY
 
       - name: Build
-        if: steps.version.outputs.skip != 'true'
         uses: ./.github/actions/build
         with:
           version: ${{ steps.version.outputs.version }}
 
       - name: Test
-        if: steps.version.outputs.skip != 'true'
-        run: dotnet test test/dotnet-dev-certs-plus.Tests --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=test-results.trx" --logger "html;LogFileName=test-results.html" --results-directory ./test-results
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: always() && steps.version.outputs.skip != 'true'
-        with:
-          name: test-results
-          path: |
-            ./test-results/*.trx
-            ./test-results/*.html
-          retention-days: 30
-
-      - name: Publish test results
-        uses: dorny/test-reporter@v1
-        if: always() && steps.version.outputs.skip != 'true'
-        with:
-          name: Test Results
-          path: ./test-results/*.trx
-          reporter: dotnet-trx
+        run: dotnet test test/dotnet-dev-certs-plus.Tests --configuration Release --no-build --verbosity normal
 
       - name: Pack dev package
-        if: steps.version.outputs.skip != 'true'
         run: |
           dotnet pack src/dotnet-dev-certs-plus/dotnet-dev-certs-plus.csproj \
             --configuration Release \
@@ -121,13 +125,11 @@ jobs:
             -p:PackageVersion=${{ steps.version.outputs.version }}
 
       - name: Build RC package
-        if: steps.version.outputs.skip != 'true'
         uses: ./.github/actions/build
         with:
           version: ${{ steps.version.outputs.rc_version }}
 
       - name: Pack RC package
-        if: steps.version.outputs.skip != 'true'
         run: |
           dotnet pack src/dotnet-dev-certs-plus/dotnet-dev-certs-plus.csproj \
             --configuration Release \
@@ -136,7 +138,6 @@ jobs:
             -p:PackageVersion=${{ steps.version.outputs.rc_version }}
 
       - name: Upload package artifact
-        if: steps.version.outputs.skip != 'true'
         uses: actions/upload-artifact@v4
         with:
           name: package
@@ -144,7 +145,6 @@ jobs:
           retention-days: 90
 
       - name: Upload RC package artifact
-        if: steps.version.outputs.skip != 'true'
         uses: actions/upload-artifact@v4
         with:
           name: package-rc
@@ -152,7 +152,6 @@ jobs:
           retention-days: 90
 
       - name: Push to GitHub Packages
-        if: steps.version.outputs.skip != 'true'
         run: |
           dotnet nuget push ./artifacts/*.nupkg \
             --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
@@ -160,7 +159,6 @@ jobs:
             --skip-duplicate
 
       - name: Update dev draft release
-        if: steps.version.outputs.skip != 'true'
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -185,7 +183,7 @@ jobs:
           **Commit:** ${{ github.sha }}
           **Build:** [#${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
 
-          This is an automatically updated pre-release containing the latest development build.
+          Version bumped via workflow dispatch.
 
           ### Installation
 
